# ragmatic

./: .gitignore  README.md  pyproject.toml
.github/workflows/: reusable.check-version.yml  reusable.run-tests.yml  reusable.tag-commit.yml  workflow.on-pr-merge.yml  workflow.on-pr.yml
examples/configuration/: basic_config.yaml  config.yaml
examples/configurations/: complete.yaml
examples/elasticsearch/: es_mapping.json  queries.md
examples/hello_printer/: example-config.yaml  run-pipeline.sh  run-rag.sh
examples/project/hello_printer/: example-config.yaml  run-encode.sh  run-pipeline.sh  run-rag.sh  run.sh
examples/project/winnie_the_pooh/: run-pipeline.sh  run-rag.sh
examples/winnie_the_pooh/: run-pipeline.sh  run-rag.sh
examples/winnie_the_pooh/book/: 03-in-which-pooh-and-piglet-go-hunting.txt  04-in-which-eeyore-loses-a-tail.txt  05-in-which-piglet-meets-a-heffalump.txt  06-in-which-eeyore-has-a-birthday.txt  07-in-which-kanga-and-baby-roo.txt  08-in-which-christopher-robin-leads.txt  11-full-license.txt
src/ragmatic/: common_types.py  utils.py
src/ragmatic/actions/: _types.py  bases.py  encode.py  rag.py  summarize.py
src/ragmatic/cli/: cli.py
src/ragmatic/code_analysis/: analyzer_factory.py  bases.py  py_analyzer.py
src/ragmatic/code_summarization/: bases.py  py_summarizer.py  summarizer_factory.py
src/ragmatic/document_sources/: filesystem.py  source_factory.py  storage.py
src/ragmatic/embeddings/: bases.py  embedder_factory.py  hugging_face.py  (+2 more)
test/: .coveragerc  generate_tests.py  test.sh
test/package_tests/: test_common_types.py
(+98 files in other folders)
